--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -4,7 +4,7 @@
         <div class="project tictactoe">
             <figure class="project__pic">
                 <a href="https://github.com/Godskid89/nigeriadata" target="_blank">
-                    <img src="{{site.baseurl}}/img/featured/cers.png" alt="nigeriadata">
+                    <img src="{{site.baseurl}}/img/featured/nigeriadatapng" alt="nigeriadata">
                 </a>
             </figure>
             <figcaption class="project__caption">
@@ -40,7 +40,7 @@
         <div class="project pace2d">
             <figure class="project__pic">
                 <a href="https://github.com/Godskid89/Bikesharing-prediction-with-flask-and-docker" target="_blank">
-                    <img src="{{site.baseurl}}/img/featured/hostspace.png" alt="bikedemand">
+                    <img src="{{site.baseurl}}/img/featured/bike.jpg" alt="bikedemand">
                 </a>
             </figure>
             <figcaption class="project__caption">
