--- a/_includes/featured-projects.html
+++ b/_includes/featured-projects.html
@@ -4,7 +4,7 @@
         <div class="project tictactoe">
             <figure class="project__pic">
                 <a href="https://github.com/Godskid89/nigeriadata" target="_blank">
-                    <img src="{{site.baseurl}}/img/featured/nigeriadatapng" alt="nigeriadata">
+                    <img src="{{site.baseurl}}/img/featured/nigeriadata.jpg" alt="nigeriadata">
                 </a>
             </figure>
             <figcaption class="project__caption">
@@ -24,7 +24,7 @@
         <div class="project tictactoe">
             <figure class="project__pic">
                 <a href="https://github.com/Godskid89/airbnb-pricing-tool" target="_blank">
-                    <img src="{{site.baseurl}}/img/featured/airbnb.png" alt="airbnb">
+                    <img src="{{site.baseurl}}/img/featured/airbnb.jpg" alt="airbnb">
                 </a>
             </figure>
             <figcaption class="project__caption">
