--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -4,7 +4,7 @@
     </h1>
 
     <h2 class="intro__tagline">
-        <span class="name">Joe</span> here, a solution-minded data scientist with solid understanding of end-to-end data science best practices and loves to crunch data and analyse stuff,
+        I'm <span class="name">Joe</span>, a solution-minded data scientist with solid understanding of end-to-end data science best practices and loves to crunch data and analyse stuff,
                 I'm also an open source hobbyist & a community mentor focused on making impacts.👨‍
     </h2>
     {% include location.html %}
